--- a/main.html
+++ b/main.html
@@ -7,6 +7,18 @@
 </head>
 
 <body>
+	<div>
+		margin 20px
+		<div>
+			border 15px solid blue
+			<div>
+				padding 50px <span>color lightblue</span>
+				<div>
+					<p>This is a demo of box model try to replicate this box model in Html and Css and try to pass all the test cases.</p>
+				</div>
+			</div>
+		</div>
+	</div>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
